--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -55,11 +55,11 @@ $color-institucional-terciario: #E6F0F6
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #7F35AB
-$color-secundario: #F3CC96
-$color-terciario: #5CFBD4
-$color-acento-contenido: #F8BC17
-$color-acento-botones: #7F35AB
+$color-primario: #1172b3
+$color-secundario: #f5e9a1
+$color-terciario: #627295
+$color-acento-contenido: #ba9c5a
+$color-acento-botones: #1172b3
 $color-adicional-1: #FDFCF5
 $color-adicional-2: #E5F0F6
 
@@ -70,8 +70,8 @@ $bg-menu: #F3F3F3
 $border-color-items-hover: $color-institucional
 
 // Colores Slyder
-$bg-fondo-slider: #8A3127
-$bg-bullets-slider-activo: #FE5A49
+$bg-fondo-slider: #105080
+$bg-bullets-slider-activo: #35B5E6
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -86,7 +86,7 @@ $color-link: $color-primario
 $color-link-hover: darken($color-primario, 25%)
 
 // Color Botones ---------------------------------------
-$color-btn-fondo: #7F35AB
+$color-btn-fondo: #1172b3
 $color-btn-texto: $white
 
 // Colores banner --------------------------------------
