--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -85,15 +85,15 @@ $custom-card-img-height: 322px
     object-fit: cover
 
 .acordion__header
-  background-color: #F0E9F6 !important
+  background-color: #fdfcf5 !important
 
 .acordion__header--active
-  background-color: #7F35AB !important
+  background-color: #f5eec2 !important
   h4, i
-    color: #fff !important
+    // color: #fff !important
 
 .acordion__contenido
-  background-color: #F0E9F6!important
+  background-color: #fbf6db!important
 
 
 .anexo__texto
@@ -181,3 +181,15 @@ $custom-card-img-height: 322px
 
   span
     font-size: 0.85em
+.mn
+  margin: 0 -3rem
+.bg-3
+  background-image: url(../assets/curso/temas/bg-3.png)
+  background-repeat: no-repeat
+  background-position: start
+  background-size: cover
+.bg-slyder
+  background-image: url(../assets/curso/temas/bg-slyder.png)
+  background-repeat: no-repeat
+  background-position: start
+  background-size: cover
