--- a/src/styles/componentes/_audio.sass
+++ b/src/styles/componentes/_audio.sass
@@ -116,14 +116,14 @@
           background-image: linear-gradient($color-acento-contenido, $color-acento-contenido)
 
   &.color-acento-botones
-    border-color: $color-acento-botones
+    border-color: $color-acento-botones !important
     .tarjeta-audio__input
       input[type=range]
-        background: rgba($color-acento-botones, 0.2)
+        background: rgba($color-acento-botones, 0.2) !important
         &::-webkit-slider-runnable-track
-          background: rgba($color-acento-botones, 0.2)
+          background: rgba($color-acento-botones, 0.2) !important
         &::-webkit-slider-thumb
-          background-color: $color-acento-botones
+          background-color: $color-acento-botones !important
         &::-moz-range-thumb
-          background-color: $color-acento-botones
-          background-image: linear-gradient($color-acento-botones, $color-acento-botones)
+          background-color: $color-acento-botones !important
+          background-image: linear-gradient($color-acento-botones, $color-acento-botones) !important
